crm-service2/deploy/DEV/deploy/config/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-core-svc
  namespace: {deploy:namespace}
spec:
  selector:
    matchLabels:
      app: crm-core-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: crm-core-svc
    spec:
      containers:
        - name: crm-core-svc
          image: {image:tag}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 512m
              memory: 1024Mi
